fix: fix hydra config error

--- a/recipe/one_step_off_policy/config/async_ppo_megatron_trainer.yaml
+++ b/recipe/one_step_off_policy/config/async_ppo_megatron_trainer.yaml
@@ -1,5 +1,10 @@
+hydra:
+  searchpath:
+    - file://recipe/config
+
+
 defaults:
-  - default_config/ppo_megatron_trainer
+  - ppo_megatron_trainer
   - _self_
 
 
